--- a/files/newPDF.html
+++ b/files/newPDF.html
@@ -409,7 +409,7 @@ function submitUsr() {
     j.collection = u;
     j.file = 'viorel';
     alert( JSON.stringify(j) );
-    Mng.Send(j);
+    alert( Mng.Send(j) );
   return true;
 }
 </script>
