--- a/files/newPDF.html
+++ b/files/newPDF.html
@@ -408,11 +408,8 @@ function submitUsr() {
   j.userName = u; j.password = v;
   id('passUsr').style.display = 'none';
   
-    j.action = 'coll exists';
-    j.collection = u;
-    alert( JSON.stringify(j) );
-    var r = Mng.Send(j); 
-    alert(r + '\n' + (typeof r));
+    var r = Mng.Send( { collection: u, action: 'coll exists' } ); 
+    alert('Exists = ' + r);
   return true;
 }
 </script>
