--- a/files/newPDF.html
+++ b/files/newPDF.html
@@ -417,10 +417,11 @@ var Usr = {
       case 2:
         if( !this.verif(['oUsr','oPsw'],['oPsw','nPsw2']) )
         { id('usrNotify').innerHTML = "<font color='red'>User or password is void or doesn't match the re-entered.</font>"; return; }
-        j.action = 'usrCreate';
+        j.action = 'usrGet';
         var u = id('oUsr').value; if(u=='files' || u=='users' || Mng.Send(j)!='0')
         { id('usrNotify').innerHTML = "<font color='red'>User already exists.</font>"; return; }
         j.psw = id('oPsw').value;
+        j.action = 'usrCreate';
         see(j);
         alert( Mng.Send(j)!='0'?'OK':'Error' );
         return;
