--- a/files/newPDF.html
+++ b/files/newPDF.html
@@ -412,7 +412,8 @@ var Usr = {
         j.psw = id('oPsw').value;
         j.action = 'usrGet';
         see(j);
-        alert( Mng.Send(j)!='*'?'OK':'No user or wrong password' );
+        if( Mng.Send(j)!='*' ) { id('usrNotify').innerHTML = "<font color='red'>No user or wrong password.</font>"; return; }
+        else alert('OK');
         return;
       case 2:
         if( !this.verif(['oUsr','oPsw'],['oPsw','nPsw2']) )
