--- a/files/newPDF.html
+++ b/files/newPDF.html
@@ -412,7 +412,7 @@ var Usr = {
         j.psw = id('oPsw').value;
         j.action = 'usrGet';
         see(j);
-        if( Mng.Send(j)!='*' ) { id('usrNotify').innerHTML = "<font color='red'>No user or wrong password.</font>"; return; }
+        if( Mng.Send(j)=='*' ) { id('usrNotify').innerHTML = "<font color='red'>No user or wrong password.</font>"; return; }
         else alert('OK');
         return;
       case 2:
