--- a/files/newPDF.html
+++ b/files/newPDF.html
@@ -451,6 +451,7 @@ var Usr = {
           var u = id('oUsr').value; if(u=='files' || u=='users' || Mng.Send(j)=='*')
           { id('usrNotify').innerHTML = "<font color='red'>User not found or the old password is wrong.</font>"; return; }
           j.action = 'usrDelete';
+          j.delCollection = j.user;
         if( Mng.Send(j)=='*' ) id('usrNotify').innerHTML = "<font color='red'>Error deleting the User.</font>";
         else { id('usrNotify').innerHTML = "<font color='green'>User removed!</font>"; Mng.xCollection = 'files'; this.showStatus(); }
         return;
