--- a/files/newPDF.html
+++ b/files/newPDF.html
@@ -162,7 +162,8 @@
       j.footer = id('footer').value.replace('{{title}}',fn);
       j.bkgr = false;
       j.body = '1';
-      j.content = '<HTML><HEAD><STYLE>'+ document.getElementsByTagName("style")[0].innerHTML +'</STYLE></HEAD><BODY>' + id('basic').innerHTML + '</BODY></HTML>';
+        var ln = '<link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Abel">';
+      j.content = '<HTML><HEAD>'+ ln +'<STYLE>'+ document.getElementsByTagName("style")[0].innerHTML +'</STYLE></HEAD><BODY>' + id('basic').innerHTML + '</BODY></HTML>';
       id('Hdn').value = JSON.stringify(j);
       return true;
     }
