--- a/files/newPDF.html
+++ b/files/newPDF.html
@@ -145,8 +145,12 @@
     var globalHTML = '<span style="padding:2px 6px 2px 6px;margin:0px 6px 0px 6px;color:white;font:bold 10pt Helvetica;background-color:green;border-radius:4px;">OK</span>';
     function insHTML() {
       if(id('chCounter').checked) {
-        fDoc('insertHTML',id('txtCounter').value);
-        for(var i=0, x = document.getElementsByName('counter'), L = x.length; i<L; i++) x[i].innerHTML = (i+1);
+        
+        //fDoc('insertHTML',id('txtCounter').value);
+        fDoc('insertHTML','<span class="counter">X</span>');
+        
+        //for(var i=0, x = document.getElementsByName('counter'), L = x.length; i<L; i++) x[i].innerHTML = (i+1);
+        for(var i=0, x = document.getElementsByClassName('counter'), L = x.length; i<L; i++) x[i].innerHTML = (i+1);
         return;
       }
       var res = window.prompt("Enter the HTML code:", globalHTML);
@@ -658,6 +662,7 @@ var Usr = {
   .quoteFirstCell { font-size: 56pt; color: lightgray; border-right: 1px solid lightgray; padding-right:8px; text-align: right; width: 70px; }
   .quoteSecondCell { padding-left:8px; font-style:italic; }
   .htmlBody {background-color:#eeeeee;border:1px solid #dddddd;border-radius:8px;padding:12px;}
+  .counter { padding:2px 6px 2px 6px;margin-right:6px;color:white;font:bold 10pt Helvetica;background-color:grey;border-radius:4px; }
   </pre>
   <pre id="Sans">
   body,td { font: normal 11pt FreeSans,Arial; }
