--- a/files/newPDF.html
+++ b/files/newPDF.html
@@ -274,6 +274,8 @@ function notify(e, o, msg) {
   o.setAttribute('rel', window.setTimeout(notify, 600, d, o, null));
 }
 
+function noDiv(e) { if(e.keyCode === 13) { fDoc('insertHTML','<br><br>'); return false; } }
+
 var Mng = {
   
   xCollection: 'files', curElem: null, cntxMenu: null, xTitle: 'fileName',
@@ -511,7 +513,7 @@ var Usr = {
         <tr><td>Use counter:</td><td><input id="chCounter" type="checkbox" checked></td></tr>
     </table>
 </div>
-<div id='basic' contentEditable=true style='position:absolute; top:30px; left: 10px; width:580px; border:1px solid gold; padding:24px;overflow-x: hidden;overflow-y: scroll;outline:none;'></div>
+<div id='basic' contentEditable=true onKeyDown='noDiv(event)' style='position:absolute; top:30px; left: 10px; width:580px; border:1px solid gold; padding:24px;overflow-x: hidden;overflow-y: scroll;outline:none;'></div>
 
 <div id='PNL' style='display:none; position:fixed; top:30px; left: 10px; border:1px solid gold;width:86px;'>
 
