--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@ Languages:<br/>
 	<li><a class='hl' href="files/aGER.html">German phrasebook</a></li>
 	<li><a class='hl' href="files/_ENG.txt">Narrated plain text</a></li>
 	<li><a class='hl' href="files/fb_note.html">Notes for Facebook</a></li>
+	<li><a class='hl' href="files/fb_edit.html">Edit for Facebook</a></li>
 </ul>
 Cloud pages:<br/>
 <ul>
